--- a/core/scss/styles.scss
+++ b/core/scss/styles.scss
@@ -16,7 +16,7 @@
  */
 
 // Bar content.
-$bar-content-bg: #f70 !default;
+$bar-content-bg: #2196F3 !default;
 $bar-content-border: transparent !default;
 $bar-content-text: #fff !default;
 
